fixed visibility of portfolio items

--- a/css/main.scss
+++ b/css/main.scss
@@ -571,8 +571,7 @@ a{
 
 	.portfolioItem{
 		-webkit-transition: 1s ease 0.4s;
-		-webkit-transition: 1s ease 0.1s;
-		transition: 1s ease 0.1s;
+		transition: 1s ease 0.4s;
 
 		p{
 			margin-top: 30px;
